Add users.yml to provide dummy data. Install rails-controller-testing

--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -1,1 +1,10 @@
 <h1>List of Users</h1>
+
+<ul>
+  <% @users.each do |user| %>
+    <li>
+        <%= user.name %>
+        <p><strong><%= user.bio || "N/A" %></strong></p>
+    </li>
+  <% end %>
+</ul>
