--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -4,7 +4,8 @@
   <% @users.each do |user| %>
     <li>
         <%= user.name %>
-        <p><strong><%= user.bio || "N/A" %></strong></p>
+        <p>Bio: <strong><%= user.bio || "N/A" %></strong></p>
+        <p>ID: <%= user.id %></p>
     </li>
   <% end %>
 </ul>
