--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -1,2 +1,11 @@
 <h1>Posts#index</h1>
-<p>All Posts</p>
+<p>All the posts of <%= @user.name %></p>
+<ul>
+  <% @posts.each do |post| %>
+    <li>
+        <%= post.title %>
+        <p><%= post.text %></p>
+    </li>
+  <% end %>
+</ul>
+
