Edit the show html file for posts

--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -1,2 +1,4 @@
 <h1>Posts#show</h1>
-<p>Posts of the specific user</p>
+<h2><%= @post.title %></h2>
+<p><%= @post.text %></p>
+<p>author: <%= @user.name %></p>
