--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -5,6 +5,7 @@
     <li>
         <%= post.title %>
         <p><%= post.text %></p>
+        <p>Post ID: <%= post.id %></p>
     </li>
   <% end %>
 </ul>
