--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -1,11 +1,9 @@
-<h1>List of Users</h1>
-
-<ul>
-  <% @users.each do |user| %>
-    <li>
-        <%= user.name %>
-        <p>Bio: <strong><%= user.bio || "N/A" %></strong></p>
-        <p>ID: <%= user.id %></p>
-    </li>
-  <% end %>
-</ul>
+<% @users.each do |user| %>
+  <div>
+      <img src=<%= user.photo %> alt="user-profile" />
+      <div>
+        <h2><%= user.name %></h2>
+        <p>Number of posts: <%= user.posts_counter %></p>
+      </div>
+  </div>
+<% end %>
