--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -1,9 +1,15 @@
+<% content_for :head do %>
+  <%= stylesheet_link_tag 'user_index' %>
+<% end %>
+
 <% @users.each do |user| %>
-  <div>
-      <img src=<%= user.photo %> alt="user-profile" />
-      <div>
-        <h2><%= user.name %></h2>
-        <p>Number of posts: <%= user.posts_counter %></p>
-      </div>
+  <div class="user-profile">
+    <div class='photo-container'>
+      <img src="<%= user.photo %>" alt="user-profile" class="user-photo" />
+    </div>
+    <div class="user-info">
+      <h2 class="user-name"><%= user.name %></h2>
+      <p class="user-post-count">Number of posts: <%= user.posts_counter %></p>
+    </div>
   </div>
 <% end %>
