--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -13,3 +13,42 @@
  *= require_tree .
  *= require_self
  */
+body {
+    margin: auto;
+}
+
+.user-profile {
+    display: flex;
+    align-items: center;
+    margin-top: 5%;
+    margin-bottom: 1rem;
+    gap: 2rem;
+}
+
+.photo-container {
+    width: 25%;
+    box-sizing: border-box;
+    border: solid 1px black;
+    height: 6rem;
+    border-radius: 4px;
+    padding: 2px;
+}
+
+.user-info {
+    display: flex;
+    box-sizing: border-box;
+    border: solid 1px black;
+    border-radius: 4px;
+    width: 75%;
+    height: 6rem;
+    justify-content: space-between;
+    padding-inline: 2rem;
+}
+
+.user-name {
+    align-self: center;
+}
+
+.user-post-count {
+    align-self: flex-end;
+}
