--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -35,4 +35,8 @@
           <% end %>
         </div>
     <% end %>
+
+    <div class="button-container">
+      <button>pagination</button>
+    </div>
 </div>
