--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -7,9 +7,13 @@
     <div class='photo-container'>
       <img src="<%= user.photo %>" alt="user-profile" class="user-photo" />
     </div>
-    <div class="user-info">
-      <h2 class="user-name"><%= user.name %></h2>
-      <p class="user-post-count">Number of posts: <%= user.posts_counter %></p>
+    <div class="user-card">
+      <%= link_to user_path(user) do %>
+        <div class="user-info">
+            <h2 class="user-name"><%= user.name %></h2>
+            <p class="user-post-count">Number of posts: <%= user.posts_counter %></p>
+        </div>
+      <% end %>
     </div>
   </div>
 <% end %>
