--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -8,7 +8,7 @@
       <img src="<%= user.photo %>" alt="user-profile" class="user-photo" />
     </div>
     <div class="user-card">
-      <%= link_to user_path(user) do %>
+      <%= link_to user_path(user), style: "text-decoration: none;" do %>
         <div class="user-info">
             <h2 class="user-name"><%= user.name %></h2>
             <p class="user-post-count">Number of posts: <%= user.posts_counter %></p>
