--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -65,6 +65,7 @@ body {
   margin-inline: 5%;
   display: flex;
   flex-direction: column;
+  color: black;
 }
 
 .post-title {
@@ -98,4 +99,18 @@ body {
 .post-head {
   display: flex;
   justify-content: space-between;
+}
+
+.button-container {
+  margin-top: 2rem;
+  margin-bottom: 2rem;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+button {
+  width: 20%;
+  height: 2rem;
+  padding: 0.5%;
 }
