--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -16,6 +16,7 @@
 </div>
 <div class="post-container">
     <% @posts.each do |post| %>
+        <%= link_to user_post_path(user_id: @user, id: post.id), style: "text-decoration: none;" do %>
         <div class="single-post">
             <div class="post-body">
                 <h3 class="post-title"><%= post.title %></h3>
@@ -28,6 +29,7 @@
                 </p>
             </div>
         </div>
+        <% end %>
         <div class="comments-container">
           <% post.comments.each do |comment| %>
             <p>
@@ -36,6 +38,7 @@
             </p>
           <% end %>
         </div>
+    
     <% end %>
 
     <div class="button-container">
