--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -42,6 +42,10 @@
     <% end %>
 
     <div class="button-container">
-      <button>pagination</button>
+      <button 
+        onclick="window.location.href='<%= new_user_post_path(@user) %>'"
+        >
+            pagination
+        </button>
     </div>
 </div>
