Add comment navigation

--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -25,4 +25,11 @@
         </p>
         <% end %>
     </div>
+    <div class="button-container">
+        <button
+            onclick="window.location.href='<%= new_user_post_comment_path(@user) %>'"
+        >
+            Comment
+        </button>
+    </div>
 </div>
