Add comment feature

--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -27,7 +27,7 @@
     </div>
     <div class="button-container">
         <button
-            onclick="window.location.href='<%= new_user_post_comment_path(@user) %>'"
+            onclick="window.location.href='<%= new_user_post_comment_path(post_id: @post) %>'"
         >
             Comment
         </button>
