--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -102,13 +102,20 @@ body {
 .button-container {
   margin-top: 2rem;
   margin-bottom: 2rem;
+  gap: 1rem;
   display: flex;
-  align-items: center;
   justify-content: center;
+  align-items: center;
 }
 
 button {
   width: 20%;
   height: 2rem;
   padding: 0.5%;
+}
+
+.like-button {
+  width: 100%;
+  height: 2rem;
+  align-self: flex-end;
 }
