--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -21,21 +21,21 @@
 </div>
 
 <div class="post-container">
-    <% @user.posts.each do |post| %>
-    <%= link_to user_post_path(user_id: @user, id: post.id), style: "text-decoration: none;" do %>
-        <div class="single-post">
-            <div class="post-body">
-                <h3 class="post-title"><%= post.title %></h3>
-                <p class="post-text"><%= post.text %></p>
+    <% @user.first_three_posts.each do |post| %>
+        <%= link_to user_post_path(user_id: @user, id: post.id), style: "text-decoration: none;" do %>
+            <div class="single-post">
+                <div class="post-body">
+                    <h3 class="post-title"><%= post.title %></h3>
+                    <p class="post-text"><%= post.text %></p>
+                </div>
+                <div class="like-comment">
+                    <p>
+                        <span>Comments: <%= post.comments_counter %></span>, 
+                        <span>Likes: <%= post.likes_counter || 0 %></span>
+                    </p>
+                </div>
             </div>
-            <div class="like-comment">
-                <p>
-                    <span>Comments: <%= post.comments_counter %></span>, 
-                    <span>Likes: <%= post.likes_counter || 0 %></span>
-                </p>
-            </div>
-        </div>
-    <% end %>
+        <% end %>
     <% end %>
 </div>
 
