--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -2,6 +2,8 @@
     <%= stylesheet_link_tag 'user_show' %>
 <% end %>
 
+<%= render 'navbar' %>
+
 
 <div class="user-profile">
     <div class='photo-container'>
