--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -1,6 +1,8 @@
 <% content_for :head do %>
   <%= stylesheet_link_tag 'user_index' %>
 <% end %>
+
+<%= render 'navbar' %>
 <% @users.each do |user| %>
   <div class="user-profile">
     <div class='photo-container'>
