--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -2,7 +2,7 @@
   <%= stylesheet_link_tag 'user_index' %>
 <% end %>
 
-<%= render 'navbar' %>
+<%= render 'helpers/navbar' %>
 <% @users.each do |user| %>
   <div class="user-profile">
     <div class='photo-container'>
