Add navbar and redesign

--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -2,6 +2,7 @@
     <%= stylesheet_link_tag 'post_show' %>
 <% end %>
 
+<%= render 'helpers/navbar' %>
   
 <div class="post-container">
     <div class="post-envelope">
