--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -2,7 +2,7 @@
     <%= stylesheet_link_tag 'user_show' %>
 <% end %>
 
-<%= render 'navbar' %>
+<%= render 'helpers/navbar' %>
 
 
 <div class="user-profile">
