Add navbar and redesign

--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -3,7 +3,7 @@
     <%= stylesheet_link_tag 'post_index' %>
 <% end %>
 
-<%= render 'navbar' %>
+<%= render 'helpers/navbar' %>
 
 <div class="user-profile">
     <div class='photo-container'>
