--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -1,6 +1,6 @@
-<div class="container">
+<div class="container-fluid" style="width: 95vw;">
   <div class="row justify-content-center">
-    <div class="col-md-6">
+    <div class="col-md-12 col-lg-8">
       <h2>Sign up</h2>
 
       <% if flash[:notice] %>
@@ -11,40 +11,34 @@
         <%= render "devise/shared/error_messages", resource: resource %>
 
         <div class="mb-3">
-          <%= f.label :name, class: "form-label" %>
-          <%= f.text_field :name, class: "form-control", autofocus: true, autocomplete: "name" %>
+          <%= f.text_field :name, class: "form-control", autofocus: true, autocomplete: "name", placeholder: "Username" %>
         </div>
 
         <div class="mb-3">
-          <%= f.label :bio, class: "form-label" %>
-          <%= f.text_area :bio, class: "form-control", autofocus: true, autocomplete: "name" %>
+          <%= f.text_area :bio, class: "form-control", autofocus: true, autocomplete: "name", placeholder: "Bio" %>
         </div>
 
         <div class="mb-3">
-          <%= f.label :photo, class: "form-label" %>
-          <%= f.text_field :photo, class: "form-control", autofocus: true, autocomplete: "photo" %>
+          <%= f.text_field :photo, class: "form-control", autofocus: true, autocomplete: "photo", placeholder: "Photo" %>
         </div>
 
         <div class="mb-3">
-          <%= f.label :email, class: "form-label" %>
-          <%= f.email_field :email, class: "form-control", autofocus: true, autocomplete: "email" %>
+          <%= f.email_field :email, class: "form-control", autofocus: true, autocomplete: "email", placeholder: "Email" %>
         </div>
 
         <div class="mb-3">
-          <%= f.label :password, class: "form-label" %>
           <% if @minimum_password_length %>
             <em>(<%= @minimum_password_length %> characters minimum)</em>
           <% end %>
-          <%= f.password_field :password, class: "form-control", autocomplete: "new-password" %>
+          <%= f.password_field :password, class: "form-control", autocomplete: "new-password", placeholder: "Password" %>
         </div>
 
         <div class="mb-3">
-          <%= f.label :password_confirmation, class: "form-label" %>
-          <%= f.password_field :password_confirmation, class: "form-control", autocomplete: "new-password" %>
+          <%= f.password_field :password_confirmation, class: "form-control", autocomplete: "new-password", placeholder: "Confirm Password" %>
         </div>
 
         <div class="text-center">
-          <%= f.submit "Sign up", class: "btn btn-primary" %>
+          <%= f.submit "Sign up", class: "btn btn-primary", style: "width: 100%;" %>
         </div>
       <% end %>
 
