--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -18,6 +18,11 @@
         </div>
         
         <p class="post-text"><%= @post.text %></p>
+         <% if can? :destroy, @post %>
+            <%= button_to 'Delete Post', user_post_path(user_id: @post.author_id, id: @post.id),
+                            method: :delete, data: { confirm: 'Are you sure you want to delete this post?' },
+                            class: 'border' %>
+        <% end %>
     </div>
     <div class="comments-container">
         <% @post.comments.each do |comment| %>
@@ -25,8 +30,8 @@
             <span><strong><%= comment.author.name %></strong></span>: 
             <span><%= comment.text %></span>
         </p>
-        <% if can? :destroy, @comment %>
-            <%= button_to "Delete Comment", comment, method: :delete, data: { confirm: "Are you sure?" } %>
+        <% if can? :destroy, comment %>
+            <%= button_to "Delete", user_post_comment_path(user_id: @post.author_id, post_id: @post.id, id: comment.id), method: :delete, data: { confirm: "Are you sure?" } %>
         <% end %>
         <% end %>
     </div>
@@ -39,11 +44,7 @@
         <div class='like-button'>
             <%= button_to 'Like', likes_path(post_id: @post.id), method: :post %>
         </div>
-         <% if can? :destroy, @post %>
-            <%= button_to 'Delete', user_post_path(user_id: @post.author_id, id: @post.id),
-                            method: :delete, data: { confirm: 'Are you sure you want to delete this post?' },
-                            class: 'border' %>
-        <% end %>
+        
     </div>
     
 </div>
