--- a/app/views/helpers/_navbar.html.erb
+++ b/app/views/helpers/_navbar.html.erb
@@ -1,6 +1,6 @@
 <nav class="navbar navbar-expand-lg navbar-light" style="background-color: lightblue;">
   <div class="container-fluid">
-    <a class="navbar-brand" href="/">My Blog</a>
+    <a class="navbar-brand" href="/"><strong><%= current_user.name %>'s</strong> Blog</a>
     <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
     </button>
