--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -47,7 +47,7 @@
       <button 
         onclick="window.location.href='<%= new_user_post_path(@user) %>'"
         >
-            pagination
+            Create Post
         </button>
     </div>
 </div>
